@@ -54,7 +54,7 @@ pkt    = parsePacket(stream)			reconstruct a packet instance from the stream
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 
-import { DFEncoder,DFDecoder } from "/modules/shared/DFCoder.mjs";
+import { DFEncoder,DFDecoder } from "/public/classes/DFCoder.mjs";
 
 
 FF.shutdown = async (event) => {                       // webpage closing, do final terminations/cleanups
