@@ -1,0 +1,5 @@
+{
+  "dependencies": {
+    "vanilla-colorful": "^0.7.2"
+  }
+}
